ttbc, [[User:Connel MacKenzie/Format|fmt]] <sir#2975252>

--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -31,20 +31,21 @@ Via {{AF.}} from {{L.}} ''[[senior]]'', '''older''' or '''elder''', from ''[[sen
 {{trans-bottom}}
 
 {{checktrans}}
+<!--added {{ttbc}}s here.-->
 {{trans-top|Translations to be categorized}}
-*[[Catalan]]: [[senyor]] {{m}}
-*Dutch: [[heer]] {{m}}, [[meneer]] {{m}}
-*French: [[monsieur]] {{m}}, [[seigneur]] {{m}}
-*German: [[Herr]] {{m}}
-*Italian: [[signore]] {{m}}
+*{{ttbc|Catalan}}: [[senyor]] {{m}}
+*{{ttbc|Dutch}}: [[heer]] {{m}}, [[meneer]] {{m}}
+*{{ttbc|French}}: [[monsieur]] {{m}}, [[seigneur]] {{m}}
+*{{ttbc|German}}: [[Herr]] {{m}}
+*{{ttbc|Italian}}: [[signore]] {{m}}
 {{trans-mid}}
-*Latin: [[dominus]] {{m}}
-*Polish: [[pan]] {{m}}
-*Portuguese: [[senhor]] {{m}}
-*Romanian: [[domn]] {{m}} (1), [[domnule]] ''(vocative form of domn)'' {{m}} (3)
-*[[Scottish Gaelic]]: [[An Ridire|an ridire]] {{m}}
-*Slovak: [[pán]] {{m}}, [[pane]] ''m vocative''
-*Spanish: [[señor]] {{m}}
+*{{ttbc|Latin}}: [[dominus]] {{m}}
+*{{ttbc|Polish}}: [[pan]] {{m}}
+*{{ttbc|Portuguese}}: [[senhor]] {{m}}
+*{{ttbc|Romanian}}: [[domn]] {{m}} (1), [[domnule]] ''(vocative form of domn)'' {{m}} (3)
+*{{ttbc|Scottish Gaelic}}: [[An Ridire|an ridire]] {{m}}
+*{{ttbc|Slovak}}: [[pán]] {{m}}, [[pane]] ''m vocative''
+*{{ttbc|Spanish}}: [[señor]] {{m}}
 {{trans-bottom}}
 
 ====Derived terms====
