/* Quotations */ <hold with the hare and run with the hounds#2975787>

--- a/en/h/hold with the hare and run with the hounds.746718.wikitext
+++ b/en/h/hold with the hare and run with the hounds.746718.wikitext
@@ -12,7 +12,7 @@
 *'''1678''', [[w:John Bunyan|John Bunyan]], ''[[w:The Pilgrim's Progress|The Pilgrim's Progress from This World to That Which is to Come]]''.
 *:He can throw stones with both hands--can '''hold with the hare and run with the hounds'''--carry fire in one hand and water in the other.
 *'''1871''', Mary Elizabeth Braddon. ''Belgravia''
-*:How happy is the man who knows really ''how to hold with the hare and run with the hounds''! in other words, to be equally agreeable to both husband and wife.
+*:How happy is the man who knows really '''how to hold with the hare and run with the hounds'''! in other words, to be equally agreeable to both husband and wife.
 *'''1874''', [[w:C. H. Spurgeon|Charles Haddon Spurgeon]], ''[http://www.spurgeon.org/sermons/1185.htm An Earnest Warning on Lukewarmness]''.
 *:Thousands try '''to hold with the hare and run with the hounds''', they are for God and Mammon, Christ and Belial, truth and error, and so are "neither hot nor cold."
 
