--- a/en/w/whithers.746846.wikitext
+++ b/en/w/whithers.746846.wikitext
@@ -1,7 +1,9 @@
-
 ==English==
+
+===Homophones===
+* [[wither]]s
 
 ===Verb===
 '''whithers'''
 
-# {{third-person singular of|[[whither]]}}
+# {{obsolete}} {{third-person singular of|[[whither]]}}
