--- a/en/w/whithering.746847.wikitext
+++ b/en/w/whithering.746847.wikitext
@@ -1,7 +1,9 @@
-
 ==English==
+
+===Homophones===
+* [[withering]]
 
 ===Verb===
 '''whithering'''
 
-# {{present participle of|[[whither]]}}
+# {{obsolete}} {{present participle of|[[whither]]}}
