--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -38,16 +38,16 @@ From Northern [[French]].
 =====Translations=====
 {{trans-top|mammal}}
 *Albanian: [[lepur i gropave]]
-*Arabic: {{ARchar|[[ارنب|أرْنَب]]}}
+*Arabic: {{ARchar|[[ارنب|أرْنَب]]}} (’árnab) {{m}}
 *[[Basque]]: [[untxi]]
-*Belarusian: [[трусяня]]/[[трусяне]], [[трус]]
+*Belarusian: [[трусяня]]/[[трусяне]] {{f}}, [[трус]] {{m}}
 *Bengali: {{BNchar|[[খরেগাশ]]}}
 *Bosnian: [[zec#Bosnian|zec]] {{m}}, [[kunić#Bosnian|kunić]] {{m}}
 *[[Breton]]: [[lapin]], [[konikl]]
-*Bulgarian: [[заек]] (zaek) [[:bg:заек|(bg)]]
+*Bulgarian: [[заек]] (zaek) [[:bg:заек|(bg)]] {{m}}
 *[[Catalan]]: [[conill]]
 *Cherokee: [[ᏥᏍᏚ]] (tsisdu)
-*Chinese: [[兔]] (tù, baitu, bai2tu4)
+*Chinese: [[兔子]] (tùzi), [[白兔]] (bótù)
 *Croatian: [[kunić#Croatian|kunić]] {{m}}
 *Czech: [[králík]]
 *Danish: [[kanin]] {{c}}
@@ -60,11 +60,11 @@ From Northern [[French]].
 *French: [[lapin]] {{m}}
 *[[Frisian]]: [[knyn]]
 *[[Friulian]]: [[cunin]]
-*[[Gallegan]]: [[coello]]
+*[[Galician]]: [[coello]]
 *German: [[Kaninchen]] {{n}}
 *Greek: [[κουνέλι]] (kuneli) {{n}}
 *[[Gujarati]]: [[સસલું]] (saslu.n)
-*Hebrew: [[ארנב]]
+*Hebrew: [[ארנב]] (arnav) {{m}}
 *Hindi: [[ख़रगोश]] (<u>kh</u>argoš) {{m}}, [[ख़रगोशनी]] (<u>kh</u>argošanī) {{f}}
 *Hungarian: [[nyúl]]
 *Icelandic: [[kanína]]
@@ -72,7 +72,7 @@ From Northern [[French]].
 *[[Interlingua]]: [[conilio]]
 *Irish: [[coinín]]
 *Italian: [[coniglio]] {{m}}
-*Japanese: [[兎]] ([[うさぎ]], usagi) [[ウサギ]]
+*Japanese: [[兎]] ([[うさぎ]], [[ウサギ]], usagi)
 *[[Judeo-Spanish]]: [[konejo]]
 *Korean: [[토끼]] (tokki)
 *[[Kurdish]]:
@@ -84,27 +84,27 @@ From Northern [[French]].
 *Latvian: [[trusis]]
 *Lithuanian: [[triušis]]
 *[[Lower Sorbian]]: [[karnikel]]
-*[[Macedonian]]: [[питом заjак]] (pitom zajak)
+*[[Macedonian]]: [[питом заjак]] (pitom zajak) {{m}}
 *Malay: [[arnab]]
-*Maltese: [[fenek]]
+*Maltese: [[fenek]] {{m}}
 *[[Nahuatl]]: [[tochtli]]
 *Norwegian: [[kanin]] {{m}}
-*[[Occitan]]: [[conilh]], [[lapin]]
+*[[Occitan]]: [[conilh]] {{m}}, [[lapin]] {{m}}
 *Persian: {{FAchar|[[خرگوش#Persian|خرگوش]]}} (<u>kh</u>ærguš)
-*Polish: [[królik]]
+*Polish: [[królik]] {{m}}
 *Portuguese: [[coelho]] {{m}}
 *Romanian: [[iepure]], [[iepure de vizuină]]
 *[[Romansh]]: [[cunigl]]
 *[[Romany]]: [[shoshoy(m.) shoshni]] {{f}}
-*Russian: [[кролик]] (krolik) {{m}}, [[крольчиха]] {{f}}
+*Russian: [[кролик]] (królik) {{m}}, [[крольчиха]] (krol’číxa) {{f}}
 *[[Sami]]: [[kaniidna]]
 *[[Sardinian]]: [[cunillu]], [[cacciappu]]
 *[[Scottish Gaelic]]: [[coineanach]] {{m}}
 *Serbian:
 *:Cyrillic: [[зец#Serbian|зец]] {{m}}, [[кунић#Serbian|кунић]] {{m}}
 *:Roman: [[zec#Serbian|zec]] {{m}}, [[kunić#Serbian|kunić]] {{m}}
-*Slovak: [[králik]]
-*Slovenian: [[kunec]] {{m}}
+*Slovak: [[králik]] {{m}}
+*Slovene: [[kunec]] {{m}}
 *[[Somali]]: [[bakayle]]
 *Spanish: [[conejo]] {{m}}
 *Swahili: [[sungura]]
@@ -114,7 +114,7 @@ From Northern [[French]].
 *Turkish: [[tavşan]]
 *[[Tzotzil]]: [[t'ul]]
 *[[Tz'utujil]]: [[umul]]
-*Ukrainian: [[кріль]] (kril'), [[кролик]] (krolik)
+*Ukrainian: [[кріль]] (kril') {{m}}, [[кролик]] (krolik) {{m}}
 *Upper Sorbian: [[nukl]]
 *Urdu: {{URchar|[[خرگوش#Urdu|خرگوش]]}} (<u>kh</u>argoš) {{m}}
 *[[Volapük]]: [[krolig]]
