--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -34,6 +34,7 @@
 
 ====Translations====
 {{trans-top|area of land surrounded by water}}
+*Albanian: [[ishull]] {{m}}, [[ujdhesë]] {{f}}
 *Czech: [[ostrov]] {{m}}
 *Croatian: [[otok]] {{m}}
 *Danish: [[ø]] {{c}}, (''of sand'') [[holm]] {{c}}, (''of rock'') [[skær]] {{c}}
@@ -53,6 +54,7 @@
 {{trans-bottom}}
 
 {{trans-top|entity surrounded by other entities that are very different from itself}}
+*Albanian: [[ishull]] {{m}}
 *Czech: [[ostrov]] {{m}}
 *Danish: [[ø]] {{c}}
 *Faroese: [[oyggj]] {{f}}
@@ -69,7 +71,6 @@
 {{checktrans}}
 {{trans-top|translations to be checked}}
 *{{ttbc|Ainu}}: [[モシリ|モシ<small>リ</small>]] (moshir)
-*{{ttbc|Albanian}}: [[ishull]] {{m}}
 *{{ttbc|Arabic}}: {{ARchar|[[جزيرة|جَزِيرَة]]}} {{unicode|(jazíːra)}} {{f}}, {{ARchar|[[جزائر|جَزَائِر]]}} {{unicode|(jazáː’ir)}} {{p}}, {{ARchar|[[جزر|جُزُر]]}} (júzur) {{p}}
 *{{ttbc|Basque}}: [[irla]], [[uharte]]
 *{{ttbc|Bosnian}}: [[ostrvo#Bosnian|ostrvo]] {{n}}
