--- a/en/b/bahasa.4609.wikitext
+++ b/en/b/bahasa.4609.wikitext
@@ -1,31 +1,39 @@
 ==Dutch==
+
 ===Etymology===
 From Sanskrit
+
 ===Noun===
 '''bahasa'''
-# (''slang'') [[Indonesian]] language. Mostly used by [[Indo]]s.
 
-
+# {{slang|lang=nl}} [[Indonesian]] language. Mostly used by [[Indo]]s.
 
 ----
 
 ==Indonesian==
+
 ===Etymology===
 From Sanskrit
+
 ===Noun===
 '''bahasa'''
+
 # [[language]]
+
+[[Category:Indonesian nouns]]
 
 ----
 
 ==Malay==
+
 ===Etymology===
 From Sanskrit
+
 ===Noun===
 '''bahasa'''
+
 # [[language]]
 
-[[Category:Indonesian nouns]]
 [[Category:Malay nouns]]
 
 [[zh-min-nan:bahasa]]
