--- a/en/h/hold with the hare and run with the hounds.746718.wikitext
+++ b/en/h/hold with the hare and run with the hounds.746718.wikitext
@@ -4,9 +4,9 @@
 '''[[hold]] [[with]] [[the]] [[hare]] [[and]] [[run]] with the [[hound]]s'''
 
 #{{context|idiom|dated}} To oppose an action or behavior and yet engage in the same action or behavior; to be a [[hypocrite]].
-#: ''Well, if you ask me, Pastor Hawkins is trying to '''hold with the hare and run with the dogs''' by opposing casino gambling when his church operates a bingo game every Thursday night.''
+#: ''Well, if you ask me, Pastor Hawkins is trying to '''hold with the hare and run with the hounds''' by opposing casino gambling when his church operates a bingo game every Thursday night.''
 # {{context|idiom|dated}} To remain [[neutral]] by attempting to [[placate]] two [[faction]]s  or both sides of a [[controversy]]. 
-#: ''Julianna needs to be careful if she keeps '''holding with the hare and running with the dogs'''; she might wind up making enemies of both  labor and management.''
+#: ''Julianna needs to be careful if she keeps '''holding with the hare and running with the hounds'''; she might wind up making enemies of both  labor and management.''
 
 ===Quotations===
 *'''1678''', [[w:John Bunyan|John Bunyan]], ''[[w:The Pilgrim's Progress|The Pilgrim's Progress from This World to That Which is to Come]]''.
