--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -193,6 +193,13 @@ When used in compounds counting a number of months with "ヶ"([[か]], ''ka''), 
 *[[新月形面包]]
 {{bottom}}
 
+==Vietnamese==
+
+===Han Character===
+{{vi-hantu|[[nguyệt]]}}
+
+# {{defn|Vietnamese}}
+
 <!--
 For an example of a character with multiple pronunciations (and hence Romanizations), see the section "Pronounciation & Definition" in [[Wiktionary talk:Entries on Chinese characters | Talk]]
 -->
