[[Category:English nouns ending in -ism]] <monetarism#2992634>

--- a/en/m/monetarism.720273.wikitext
+++ b/en/m/monetarism.720273.wikitext
@@ -6,3 +6,4 @@
 
 #{{economics}} The doctrine that [[economic]] systems are controlled by variations in the [[supply]] of [[money]]
 #{{economics}} The [[political]] doctrine that a nation's [[economy]] can be controlled by regulating the money supply
+[[Category:English nouns ending in -ism]]
