--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -75,6 +75,7 @@ Middle English [[þoȝ]], borrowed from a Scandinavian source such as Old Norse 
 *Italian: [[anche]] [[se]]
 *Portuguese: [[apesar]] de
 *Romanian: [[desi]], de [[parca]]
+*Russian: [[хотя]], [[если бы даже]], [[несмотря на то, что]]
 *Slovak: [[hoci]] 
 *Spanish: [[sin embargo]], [[a pesar de]]
 {{trans-bottom}}
