trans link [[Lower Sorbian]], trans link [[Upper Sorbian]] <island#2994193>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -45,11 +45,11 @@
 {{trans-mid}}
 *Greek: {{t+|el|νησί|n|}} (nisí)
 *Hebrew: {{he-translation|אי|i|wv=אִי}} {{m}}
-*Lower Sorbian: [[kupa]] {{f}}
+*[[Lower Sorbian]]: [[kupa]] {{f}}
 *Polish: {{t+|pl|wyspa}} {{f}}
 *Russian: [[остров]] (óstrov) {{m}}
 *Swedish: [[ö]] {{c}}, [[holme]] {{c}}, [[kobbe]] {{c}}, [[skär]] {{n}}
-*Upper Sorbian: [[kupa]] {{f}}
+*[[Upper Sorbian]]: [[kupa]] {{f}}
 *Welsh: [[ynys]] {{f}}
 {{trans-bottom}}
 
