--- a/en/g/gamble.34097.wikitext
+++ b/en/g/gamble.34097.wikitext
@@ -16,7 +16,7 @@
 #: The sailors had taken many '''gambles''' ''(plural)'' with the sea and always won.
 
 ====Translations====
-{{trans-top|  }}
+{{trans-top}}
 *Dutch: [[gok]] {{m}}
 *German: [[Glücksspiel]] {{n}}, [[Spiel]] {{n}}
 {{trans-mid}}
