--- a/en/n/nutty as a fruitcake.746571.wikitext
+++ b/en/n/nutty as a fruitcake.746571.wikitext
@@ -8,7 +8,7 @@
 #*:Eugene O'Neill, in his 1914 play, ''The Movie Man'', coined a memorable simile: "We sure are as '''nutty as a fruitcake''' or we wouldn't be here."
 
 ====Synonyms====
-* [[barmy]], [[crazy]], [[daffy]], [[dotty]], [[mad]], [[wacky]], [[zany]]
+* [[barmy]], [[crazy]], [[daffy]], [[dotty]], [[kooky]], [[loopy]], [[mad]], [[wacky]], [[zany]]
 
 ===References===
 *"[http://dictionary.reference.com/search?r=2&q=nutty+as+a+fruitcake nutty as a fruitcake]" in the ''Dictionary.com Unabridged, v1.0.1'', Lexico Publishing Group, 2006.
