--- a/en/m/monetarism.720273.wikitext
+++ b/en/m/monetarism.720273.wikitext
@@ -6,4 +6,11 @@
 
 #{{economics}} The doctrine that [[economic]] systems are controlled by variations in the [[supply]] of [[money]]
 #{{economics}} The [[political]] doctrine that a nation's [[economy]] can be controlled by regulating the money supply
+
+====Translations====
+{{top}}
+*Croatian: {{t|hr|monetarizam|m}}
+{{mid}}
+{{bottom}}
+
 [[Category:English nouns ending in -ism]]
