--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -128,8 +128,10 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 {{trans-mid}}
 {{trans-bottom}}
 
-'''Law: concept of separate responsibility'''
-[[deelbaarheid]] (van prestasie)
+{{trans-top|law: concept of separate responsibility}}
+*Dutch: [[deelbaarheid]] (van prestasie) {{f}}
+{{trans-mid}}
+{{trans-bottom}}
 
 =====Translations to be checked=====
 {{checktrans}}
