trans link [[Afrikaans]] <division#2997967>

--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -28,7 +28,7 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 
 ====Translations====
 {{trans-top|act or process of dividing anything}}
-*Afrikaans: [[verdeling]]
+*[[Afrikaans]]: [[verdeling]]
 *Czech: [[dělení]] {{n}}
 *Dutch: [[deling]] {{f}}; [[verdeling]] {{f}}; [[scheiding]] {{f}}
 *Esperanto: [[divido]]
@@ -48,7 +48,7 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 {{trans-bottom}}
 
 {{trans-top|each of the parts resulting from division}}
-*Afrikaans: [[gedeelte]]
+*[[Afrikaans]]: [[gedeelte]]
 *Czech: [[díl]] {{m}}
 *Dutch: [[deel]] {{n}}, [[gedeelte]] {{n}}
 *Finnish: [[osa]]
@@ -59,7 +59,7 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 {{trans-bottom}}
 
 {{trans-top|arithmetic: process of dividing a number by another}}
-*Afrikaans: [[deel]]
+*[[Afrikaans]]: [[deel]]
 *Czech: [[dělení]] {{n}}
 *Dutch: [[deling]] {{f}}; [[delen]] {{n}}
 *Esperanto: [[divido]]
@@ -79,7 +79,7 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 {{trans-bottom}}
 
 {{trans-top|arithmetic: calculation involving this process}}
-*Afrikaans: [[deel]]
+*[[Afrikaans]]: [[deel]]
 *Czech: [[dělení]] {{n}}
 *Dutch: [[deling]] {{f}}; [[staartdeling]] {{f}}
 *Finnish: [[jakolasku]]
@@ -92,7 +92,7 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 {{trans-bottom}}
 
 {{trans-top|large military unit}}
-*Afrikaans: [[afdeling]]; [[skeiding]]
+*[[Afrikaans]]: [[afdeling]]; [[skeiding]]
 *Dutch: [[divisie]] {{f}},
 *Esperanto: [[divizio]]
 *Finnish: [[divisioona]]
@@ -108,7 +108,7 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 {{trans-bottom}}
 
 {{trans-top|section of a large company}}
-*Afrikaans: [[afdeling]]
+*[[Afrikaans]]: [[afdeling]]
 *Dutch: [[afdeling]] {{f}}, [[divisie]] {{f}}, [[eenheid]] {{f}}
 *Kurdish: {{KUchar|[[به‌ش]]}}
 {{trans-mid}}
