--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -106,7 +106,7 @@
 ====Translations====
 {{trans-top|pester}}
 *Dutch: [[lastigvallen]], [[plagen]]
-*German: [[belästigen]], [[plagen]]
+*German: [[belästigen]], [[plagen]], [[piesacken]]
 {{trans-mid}}
 *Greek: [[ταράζω]], [[ζαλίζω]]
 *Tok Pisin: [[bagarapim]] [[sindaun]] bilong<!-- if these words make up a single idiom, they should be wikified as a single entity-->
