--- a/en/s/subtraction.26255.wikitext
+++ b/en/s/subtraction.26255.wikitext
@@ -5,7 +5,7 @@
 *Rhymes: [[Rhymes:English:-ækʃən|-ækʃən]]
 
 ===Noun===
-'''subtraction''' (''[[countable]] and [[uncountable]]; plural'' '''subtractions''')
+{{en-noun|s|-}}
 
 # {{arithmetic}} (''uncountable'') The process of [[subtract]]ing a [[number]] from another.
 # {{arithmetic}} (''countable'') A calculation involving subtraction.
