/* Translations */ +krl, vep <pig#3002125>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -77,6 +77,7 @@
 *Irish: [[muc]]
 *Italian: [[maiale]] {{m}}, [[porco#Italian|porco]] {{m}}
 *Japanese: [[豚]] ([[ぶた]], buta)
+*[[Karelian]]: [[počči]]
 *Korean: [[돼지]] (dwaeji)
 *Kurdish: {{KUchar|[[به‌راز]]}}
 *[[Ladin]]: [[porcel]]
@@ -119,6 +120,7 @@
 *Ukrainian: [[свиня]] (svynja) {{f}}
 *[[Upper Sorbian]]: [[swinjo]]
 *Urdu: {{URchar|[[خوک]]}}, {{URchar|[[خنزیر]]}}
+*[[Veps]]: [[siga#Estonian|siga]]
 *Welsh: [[mochyn]]
 {{trans-bottom}}
 
