/* Translations */ fix <pig#3002129>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -120,7 +120,7 @@
 *Ukrainian: [[свиня]] (svynja) {{f}}
 *[[Upper Sorbian]]: [[swinjo]]
 *Urdu: {{URchar|[[خوک]]}}, {{URchar|[[خنزیر]]}}
-*[[Veps]]: [[siga#Estonian|siga]]
+*[[Veps]]: [[siga#Veps|siga]]
 *Welsh: [[mochyn]]
 {{trans-bottom}}
 
