--- a/en/d/dud.26266.wikitext
+++ b/en/d/dud.26266.wikitext
@@ -11,6 +11,7 @@ Ultimately from ''[[dudde]]'' (ragged clothing''), of uncertain origin beyond th
 '''dud''' (''plural:'' [[duds]])
 
 # A broken or nonfunctional device that does not perform its intended function, such as a [[bomb]].
+# {{obsolete}} Clothes, now always used in plural form [[duds]].
 
 ====Translations====
 *Finnish: [[susi]], [[suutari]]
