/* Translations to be checked */ vietnamese <theory#3004413>

--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -168,11 +168,12 @@ English since 1613, from French ''[[théorie]]'' < Latin ''[[theoria]]'' < Greek
 *{{ttbc|Chinese}}: [[理论]]/[[理論]] (lǐlùn); [[论]]/[[論]] (lùn); [[学说]]/[[學説]] (xuéshuō); [[道理]] (dàolǐ)
 *{{ttbc|Indonesian}}: [[teori]]
 *{{ttbc|Hungarian}}: [[elmélet]], {{ttbc|Hungarian}}: [[teória]]
-{{mid}}
 *{{ttbc|Italian}}: [[teoria]] {{f}}
+{{mid}}
 *{{ttbc|Japanese}}: [[意見]] (いけん, iken)
 *{{ttbc|Korean}}: [[이론]] (iron)
 *{{ttbc|Turkish}}: [[teori]]
+*{{ttbc|Vietnamese}}: [[lý thuyết]]
 {{bottom}}
 
 ===See also===
