/* Croatian */ +decl. <sir#3007201>

--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -75,9 +75,20 @@ Via {{AF.}} from {{L.}} ''[[senior]]'', '''older''' or '''elder''', from ''[[sen
 ==Croatian==
 
 ===Noun===
-{{infl|hr|noun|g=m}}
+{{hr-noun|g=m|sirevi}}
 
 # [[cheese]]
+
+====Declension====
+{{hr-decl-noun
+|sir|sirevi
+|sira|sireva
+|siru|sirevima
+|sir|sireve
+|siru|sirevi
+|siru|sirevima
+|sirom|sirevima
+}}
 
 ----
 
