--- a/en/p/prisoner of war.4326.wikitext
+++ b/en/p/prisoner of war.4326.wikitext
@@ -9,28 +9,29 @@
 
 ====Translations====
 {{trans-top|soldier or combatant captured by the enemy}}
-*Chinese: [[战俘]]/[[戰俘]] (zhàn fú)
+*Chinese: [[战俘]], [[戰俘]] (zhàn fú)
 *Czech: [[zajatec]] {{m}}, [[válečný zajatec]] {{m}}
 *Dutch: [[krijgsgevangene]]
 *Finnish: [[sotavanki]]
 *French: [[prisonnier de guerre]] {{m}}
 *German: [[Kriegsgefangene]] {{m}}
-*Greek, Modern: [[αιχμάλωτος πολέμου]] (aichmálōtos polémou)
+*Greek, Modern: [[αιχμάλωτος πολέμου]] (ekhmálotos polému)
 *Icelandic: [[stríðsfangi]] {{m}}
 *[[Interlingua]]: [[prisionero de guerra]]
 *Italian: [[prigioniero di guerra]] {{m}}
-{{trans-mid}}
 *Japanese: [[捕虜]] (horyo)
-*Korean: [[전쟁 포로]]
+{{trans-mid}}
+*Korean: [[전쟁 포로]] (jeonjaeng poro)
 *Latin: [[dediticius]] {{m}}
 *Norwegian: [[krigsfange]] {{m}}
-*Persian: [[اسیر]] (asir), [[بندی]] (bandi)
-*Portuguese: [[prisioneiro de guerra]]
+*Persian: {{fa-Arab|[[اسیر]]}} (asir), {{fa-Arab[[بندی]]}} (bandi)
+*Portuguese: [[prisioneiro de guerra]] {{m}}
+*Russian: [[военнопленный]] (vojennoplénnyj) {{m}}
 *Slovak: [[zajatec]] {{m}} (''plural:'' zajatci)
 *Spanish: [[prisionero de guerra]] {{m}}
 *Swedish: [[krigsfånge]]
 *[[Telugu]]: [[యుద్ధ ఖైదీ]] (yuddha khaidee)
-*Ukrainian: [[бранець]] (br'''a'''nec') {{m}}
+*Ukrainian: [[бранець]] (bránets') {{m}}
 *[[Volapük]]: [[kligafanäböpäb]]
 {{trans-bottom}}
 
