--- a/en/a/American English.34094.wikitext
+++ b/en/a/American English.34094.wikitext
@@ -22,3 +22,9 @@
 
 [[Category:Regional English]]
 [[category:Dialects]]
+
+[[fr:American English]]
+[[hu:American English]]
+[[pl:American English]]
+[[fi:American English]]
+[[tr:American English]]
