--- a/en/q/quatorze.26056.wikitext
+++ b/en/q/quatorze.26056.wikitext
@@ -6,9 +6,7 @@ From the Latin ''[[quattuordecim]]'' meaning fourteen.
 *[[w:IPA|IPA]]: /ka.tɔʁz/
 *[[w:SAMPA|SAMPA]]: /ka.tORz/
 
-===Cardinal number===
-'''quatorze'''
-#[[fourteen]]
+anos
 
 ===Related terms===
 *[[quatorzain]]
