/* Translations */ +ja <attend#3015910>

--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -22,6 +22,7 @@ From {{OF.}} ''[[atendre]]'' ({{F.}} ''[[attendre]]'').
 *French: [[assister]] à (1)
 *German: [[teilnehmen]] [[an]] (1), [[besuchen]] (1), [[beachten]] (2), [[sich]] [[kümmern]] [[um]] (2)
 *Hungarian: [[jár]]
+*Japanese: [[出席する]] (shusseki suru)
 *Spanish: [[asistir]] (1), [[atender]] (2)
 
 [[bg:attend]]
