--- a/en/a/American English.34094.wikitext
+++ b/en/a/American English.34094.wikitext
@@ -10,14 +10,14 @@
 
 ====Translations====
 {{trans-top|American English}}
-*[[Chinese]]: [[美國英語]] (traditional); [[美国英语]] (simplified)
+*Chinese: [[美國英語]] (traditional); [[美国英语]] (simplified)
 *Finnish: [[amerikanenglanti]]
 *French: [[anglais américain]] {{m}}
 *German: [[Amerikanisches Englisch]]
 {{trans-mid}}
-*[[Korean]]: [[미국 영어]] ([[美國英語]])
-*[[Swedish]]: [[amerikansk engelska]]
-*[[Russian]]: американский английский
+*Korean: [[미국 영어]] ([[美國英語]])
+*Swedish: [[amerikansk engelska]]
+*Russian: американский английский
 {{trans-bottom}}
 
 [[Category:Dialects]]
