--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -122,7 +122,7 @@ From {{ME.}}, from {{OE.}} ''[[þing]]''.
 *[[Ido]]: [[kozo]]
 *Indonesian: [[benda]], [[barang]], [[makhluk]]
 *[[Interlingua]]: [[cosa]]
-*Inuktitut: [[ᐱ]]
+*[[Inuktitut]]: [[ᐱ]]
 *Irish: [[rud]] {{m}}, [[ní]] {{m}}
 {{trans-mid}}
 *Italian: [[cosa]] {{f}}
@@ -173,8 +173,8 @@ From {{ME.}}, from {{OE.}} ''[[þing]]''.
 *[[thingy]]
 {{bottom}}
 
-[[Category: Metasyntactic words]]
 [[Category:1000 English basic words]]
+[[Category:Metasyntactic words]]
 
 [[ang:thing]]
 [[ar:thing]]
