--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -128,7 +128,7 @@ Old English ''[[þonne]]''
 
 # being so at that time
 
-===Translations===
+====Translations====
 {{trans-top|being so at that time}}
 *Dutch: [[toenmalig]], [[toenmalige]]
 {{trans-mid}}
