+{{rfc-level|Translations to be checked at L5+, not in Translations}}, trans unlink Kurdish <then#3025485>

--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -41,7 +41,7 @@ Old English ''[[þonne]]''
 *German: [[dann]], [[damals]]
 *Greek: [[τότε]]
 *Hebrew: [[איפוא]] (eiphoh)
-*[[Kurdish]]: [[hingê]], [[wê]] [[dem]]ê, [[wî]] [[çax]]î, wî [[wext]]î, wê [[gav]]ê
+*Kurdish: [[hingê]], [[wê]] [[dem]]ê, [[wî]] [[çax]]î, wî [[wext]]î, wê [[gav]]ê
 *Malay: [[pada masa yang sama]]
 {{trans-mid}}
 *Old English: [[þa|þā]]
@@ -60,7 +60,7 @@ Old English ''[[þonne]]''
 *Esperanto: [[tiam]]
 *Finnish: [[sitten]] [[:fi:sitten|^]]
 *French: [[puis]]
-*[[Kurdish]]: [[paşî]], [[dûre]], [[piştre]], [[dûvre]], [[peyre]]
+*Kurdish: [[paşî]], [[dûre]], [[piştre]], [[dûvre]], [[peyre]]
 *Malay: [[tidak lama kemudian]]
 {{trans-mid}}
 *Old English: [[þa|þā]]
@@ -80,7 +80,7 @@ Old English ''[[þonne]]''
 *Finnish: [[sitten]] [[:fi:sitten|^]]
 *French: [[puis]]
 *German: [[danach]]
-*[[Kurdish]]: [[paşî]], [[dûre]], [[piştre]], [[dûvre]], [[peyre]]
+*Kurdish: [[paşî]], [[dûre]], [[piştre]], [[dûvre]], [[peyre]]
 {{trans-mid}}
 *Malay: [[selepas itu]]
 *Old English: [[þa|þā]]
@@ -101,7 +101,7 @@ Old English ''[[þonne]]''
 *Finnish: [[niin]] [[:fi:niin|^]]
 *French: [[alors]]
 {{trans-mid}}
-*[[Kurdish]]: [[pa]], [[de]], [[madem]]
+*Kurdish: [[pa]], [[de]], [[madem]]
 *Malay: [[oleh sebab yang demikian]]
 *Old English: [[þa|þā]]
 *Polish: [[to]], [[wówczas]]
@@ -115,7 +115,7 @@ Old English ''[[þonne]]''
 {{trans-top|at the same time; on the other hand}}
 *Esperanto: [[tamen]]
 *Finnish: [[toisaalta]] [[:fi:toisaalta|^]]
-*[[Kurdish]]: li [[mil]]ê din, [[li]] [[alî]] [[dî]]
+*Kurdish: li [[mil]]ê din, [[li]] [[alî]] [[dî]]
 {{trans-mid}}
 *Polish: [[również]], [[także]]
 *Portuguese: [[ao mesmo tempo]], [[simultaneamente]]; [[entretanto]]
@@ -154,6 +154,7 @@ Old English ''[[þonne]]''
 *[[until then]]
 
 =====Translations to be checked=====
+{{rfc-level|Translations to be checked at L5+, not in Translations}}
 {{checktrans}}
 
 *{{ttbc|Arabic}}: {{ARchar|[[ثم]]}} {{unicode|(θúmma)}}
