--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -113,7 +113,7 @@
 {{trans-bottom}}
 
 {{trans-top|fellate}} <!--8-->
-*Catalan: [[llepar]]
+*[[Catalan]]: [[llepar]]
 *Finnish: [[ottaa]] [[suu|suihin]]
 *French: [[sucer]], [[tailler]] une [[pipe]]
 *Korean: [[아양떨다]] (ayang-tteolda)
