--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -2,25 +2,26 @@
 ==English==
 
 ===Etymology===
-{{L.}} ''species'' [[view]]; [[appearance]]; [[vision]]; [[dream]]; [[semblance]] ''specere'' to [[see]] + ''-ies'' suffix signifying [[abstract]] noun
+{{L.}} {{term|species|lang=la||view; appearance; vision; dream; semblance}}, from {{term|specere|lang=la||to see}} + {{term|-ies|lang=la}} suffix signifying [[abstract]] noun
 
 ===Pronunciation===
-*{{italbrac|[[RP]]}}: {{IPA|/ˈspiːʃiːz/}}
-*{{italbrac|US}}: {{IPA|/ˈspiːsiːz/ or /ˈspiːʃiːz/}}
+*{{a|RP}} {{IPA|/ˈspiːʃiːz/}}
+*{{a|US}} {{IPA|/ˈspiːsiːz/ or /ˈspiːʃiːz/}}
 *{{audio|en-us-species.ogg|Audio (US)}}
 
 ===Noun===
 {{en-noun|species}}
 
 # A group of plants or animals having [[similar]] [[appearance]].
-#: ''This species of rock is unique to the area''
+#: ''This '''species''' of rock is unique to the area.''
 # {{context|biology|taxonomy}} A [[rank]] in the classification of [[organism]]s, below [[genus]] and above [[subspecies]]; a [[taxon]] at that rank
-#: ''Hence, in determining whether a form should be ranked as a '''species''' or a variety, the opinion of naturalists having sound judgment and wide experience seems the only guide to follow.'' &mdash; Darwin, '''On the Origin of Species'''
-#*See [[species name]] for usage and example of scientific names of species. 
+#* Darwin, ''On the Origin of '''Species''''':
+#*: ''Hence, in determining whether a form should be ranked as a '''species''' or a variety, the opinion of naturalists having sound judgment and wide experience seems the only guide to follow.''
 # {{chemistry}} A specific known or unknown [[element]], [[molecule]], [[radical]] or [[ion]]; used commonly when the [[entity]]'s status as an element, molecule etc. is unknown.
 
 ====Usage notes====
-:''Note - [[specie]] is a separate word, not the singular version of species.''
+* {{term|specie}} is a separate word, not the singular version of {{term|species}}.
+* {{sense|biology, taxonomy, rank in the classification of organisms}} See {{term|species name}}. 
 
 ====Related terms====
 *[[speciate]]
@@ -40,7 +41,7 @@
 *Swedish: [[art]] {{c}}
 {{trans-bottom}}
 
-{{top}}
+{{ttbc-top}}
 *[[Catalan]]: [[espècie]], {{f}}
 *Chinese: [[種]], [[种]] (zhǒng); [[類]], [[类]] (lèi); [[種類]], [[种类]] (zhǒnglèi)
 *Danish: [[art]] {{c}}
@@ -51,7 +52,7 @@
 *Hungarian: [[fajta]] (1), [[faj]] (2,3)
 *Indonesian: [[spesies]], [[jenis]]
 *[[Interlingua]]: [[specie]]
-{{mid}}
+{{ttbc-mid}}
 *Italian: [[specie]] {{f}}, (plural: [[speci]])
 *Japanese: [[種]] ([[しゅ]], shu), [[類]] ([[るい]], rui), [[種類]] ([[しゅるい]], shurui)
 *Lithuanian: [[rūšis]] {{f}}
@@ -61,7 +62,7 @@
 *Slovene: [[vrsta]] {{f}}
 *Spanish: [[especie]] {{f}}
 *Swedish: [[art]] {{c}}
-{{bottom}}
+{{ttbc-bottom}}
 
 ===See also===
 *[[family]]
@@ -81,10 +82,10 @@
 ==Latin==
 
 ===Etymology===
-''[[specere]]'', "to [[see]]" + ''-ies'' suffix signifying [[abstract]] noun.
+{{term|specere|lang=la||to see}} + {{term|-ies|lang=la}} suffix signifying [[abstract]] noun.
 
 ===Noun===
-'''species''' ''f'', ''speciei''
+{{infl|la|noun|head=spĕcĭēs|gender=f|genitive|[[speciei|spĕciēī]]}}
 
 # [[view]]; [[appearance]]; [[vision]]; [[dream]]; [[semblance]]
 
