trans link [[Macedonian]], trans unlink Faroese <ermine#3034280>

--- a/en/e/ermine.8234.wikitext
+++ b/en/e/ermine.8234.wikitext
@@ -33,7 +33,7 @@
 *Dutch: [[hermelijn]] {{m}}
 *Esperanto: [[ermeno]]
 *Estonian: [[kärp]], [[lahits]], [[hermeliin]]
-*[[Faroese]]: [[roysikøttur]]
+*Faroese: [[roysikøttur]]
 *Finnish: [[kärppä]]
 *French: [[hermine]] {{f}}
 *[[Frisian]]: [[harmeling]]
@@ -51,7 +51,7 @@
 *Latvian: [[sermulis]]
 *Lithuanian: [[šermuonėlis]]
 *[[Lower Sorbian]]: [[hermelin]]
-*Macedonian: [[хермелин]] ([[hermelin]])
+*[[Macedonian]]: [[хермелин]] ([[hermelin]])
 *Maltese: [[ermellin]]
 *Norwegian: [[røyskatt]]
 *[[Occitan]]: [[ermina]]
