--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -12,7 +12,8 @@ From {{L.}} and Old French  ''[[capere]]'' to capture.
 {{en-verb|cop|p|ing}}
 
 # {{colloquial}} To [[capture]], get hold of, [[take]].
-#*'''2005''', Heroin appeared on the streets of our town for the first time, and Innie watched helplessly as his sixteen-year-old brother began taking the train to Harlem to '''cop''' smack. — Martin Torgoff, ''Can't Find My Way Home'' (Simon & Schuster 2005, p. 10)
+#* '''2005,''' Martin Torgoff, ''Can't Find My Way Home'', Simon &amp; Schuster, page 10,
+#*: Heroin appeared on the streets of our town for the first time, and Innie watched helplessly as his sixteen-year-old brother began taking the train to Harlem to '''cop''' smack.
 
 =====Derived terms=====
 *[[cop a feel]]
