--- a/en/m/musclebrain.746557.wikitext
+++ b/en/m/musclebrain.746557.wikitext
@@ -11,6 +11,6 @@ From {{term|muscle}} + {{term|brain}}
 
 ====Synonyms====
 # {{i-c|participant in physical sports}} [[athlete]]
-# {{i-c|idiot}} [[bruiser]], [[dumbbell]], [[moron]], [[buffoon]], [[dimwit]]
+# {{i-c|idiot}} [[bruiser]], [[dumbbell]], [[moron]], [[buffoon]], [[dimwit]], [[pinhad]]
 
 [[Category:Sports]]
