/* Translations */ fi <bid#3047026>

--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -43,23 +43,27 @@ From {{OE.}} verb ''[[beodan|bēodan]]'' ‘offer, announce’. Conflation from 
 =====Translations=====
 {{trans-top|intransitive: to make an offer}}
 *Dutch: [[bieden]]
+*Finnish: [[tarjota]], [[tehdä]] [[tarjous]]
 *German: [[bieten]]
-*Ialian: [[fare un'offerta per un'asta]]
+*Italian: [[fare un'offerta per un'asta]]
 {{trans-mid}}
 {{trans-bottom}}
 
 {{trans-top|intransitive: to announce goal}}
+*Finnish: [[tarjota]]
 *German: [[melden]], [[reizen]]
 {{trans-mid}}
 {{trans-bottom}}
 
 {{trans-top|transitive: to offer as a price}}
 *Dutch: [[bieden]]
+*Finnish: [[tarjota]]
 *German: [[bieten]]
 {{trans-mid}}
 {{trans-bottom}}
 
 {{trans-top|transitive: to announce goal}}
+*Finnish: [[tarjota]]
 *German: [[melden]], [[reizen]]
 {{trans-mid}}
 {{trans-bottom}}
