--- a/en/s/synæresis.742365.wikitext
+++ b/en/s/synæresis.742365.wikitext
@@ -8,3 +8,5 @@
 #*: I<small>N</small> an attempt to extend observations on the '''synæresis''' of actomyosin by adenosine triphosphate to a less disorganized and more physiologically complete system, the volume changes which accompany the disappearance of the latter in a muscle fibre suspension are being studied.
 #* '''1985''': Charles-James N. Bailey, <i>[http://www.ethnologue.com/ Ethnoloɠue, Languages of the World]: [http://www.ethnologue.com/show_product.asp?isbn=0883120003 English Phonetic Transcription]</i> ([[ISBN-13]]: 978–0–88312–000–2; [[ISBN-10]]: 0–88312–000–3), chapter 9 title
 #*: '''Synæresis''', spirantization, and sonorant-degemination
+
+[[Category:English words spelled with ligatures|synaeresis]]
