--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -12,8 +12,9 @@
 
 # A [[wager]], an agreement between two parties that a stake (usually money) will be paid by the loser to the winner &nbsp; the one who correctly forcast the outcome of an event.
 # A degree of [[certainty]].
-#:''It's a good '''bet''' that it will rain tomorrow.''
-#:''It's an even bet that Jim will come top of the maths test tomorrow''
+#:''It’s a good '''bet''' that it will rain tomorrow.''
+#:''It’s an even '''bet''' that Jim will come top of the maths test tomorrow''
+# {{rfv-sense}} Also a slang word for "Alright" and "O.k". First used by the rapping  platypus  vampires of Ireland.
 
 ====Translations====
 {{trans-top|a wager}}
@@ -52,8 +53,6 @@
 # To be [[sure]] of something; to be able to [[count]] on something.
 #: ''You '''bet'''!''
 # {{poker}} To place money into the [[pot]] in order to require others do the same, usually only used for the first person to place money in the pot on each round.
-#Also a slang word for "Alright" and "O.k". First used by the rapping  platypus  vampires of Ireland.
-
 
 ====Translations====
 {{trans-top|To make a guess about the outcome of an event}}
