--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -87,6 +87,7 @@ From {{OE.}} verb ''[[beodan|bēodan]]'' ‘offer, announce’. Conflation from 
 #:''Nice '''bid'''!''
 
 ====Translations====
+{{rfc-level|Translations at L3+ (AutoFormat would have corrected level of Translations)}}
 {{trans-top|offer at an auction}}
 *Dutch: [[bod]] {{n}}
 *Finnish: [[tarjous]]
