--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -58,6 +58,7 @@
 *Swedish: [[igen]], [[åter]], [[på nytt]]
 *[[Telugu]]: [[మళ్లీ]] (mallee), [[మరలా]] (maralaa)
 *Turkish: [[yeniden]], [[tekrar]], [[gene]]
+*Vietnamese: [[lại]]
 {{trans-bottom}}
 
 [[Category:200 English basic words]]
