trans link [[Afrikaans]] <again#3068295>

--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -24,7 +24,7 @@
 
 ====Translations====
 {{trans-top|having already happened before}}
-*Afrikaans: [[weer]], [[alweer]]
+*[[Afrikaans]]: [[weer]], [[alweer]]
 *Arabic: {{ARchar|[[مرة اخرى]]}} {{unicode|(mára ’úχra)}}
 *[[Breton]]: [[adarre]]
 *Bulgarian: [[отново]] (otnovo), [[пак]] (pak)
