--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -21,7 +21,7 @@ Via Middle English and Old French from Latin ''[[domina]]''
 
 ====Translations====
 {{trans-top|lady, woman}}
-*Finnish: [[daami]], [[nainen]]
+*Finnish: [[daami]], [[nainen]] Hindi: Urath
 {{trans-mid}}
 {{trans-bottom}}
 
