--- a/en/b/better late than never.746527.wikitext
+++ b/en/b/better late than never.746527.wikitext
@@ -1,9 +1,16 @@
-{{context}}[[Category:Move to Wiktionary 2007-09]]
-The earliest record of the phrase "'''better late than never'''" comes from around [[27 BC]] in the 4th book<ref>{{cite web |url=http://mcadams.posc.mu.edu/txt/ah/Livy/Livy04.html |title=Livy's History of Rome |accessdate=2007-05-29 |author=Butterfield, Bruce J. |date=1996 |format=HTML |work=Livy - History of Rome |publisher=Marquette University ([http://mu.edu mu.edu]) |language=English |quote=Their insolence and recklessness must be opposed, and better late than never.}}</ref> of ''[[Ab Urbe condita (book)|Ab Urbe condita]]'' (''History of Rome'') by [[Livy|Titus Livius]].
+==English==
 
+===Etymology===
+
+The earliest record of the phrase ''better late than never'' comes from around 27 BC in the 4th book<ref>{{cite web |url=http://mcadams.posc.mu.edu/txt/ah/Livy/Livy04.html |title=Livy's History of Rome |accessdate=May 29, 2007 |author=Butterfield, Bruce J. |date=1996 |format=HTML | publisher=Marquette University ([http://mu.edu mu.edu]) |language=English.}}</ref> of ''[[w:Ab Urbe condita (book)|Ab Urbe condita]]'' (''History of Rome'') by [[w:Livy|Titus Livius]].
+
+===Phrase===
+'''[[better]] [[late]] than]] [[never]]'''
+
+# It's better do do something late, than to never do it at all.
+#*'''1996.''' Titus Livius (translation). ''Livy's History of Rome'' (in English):
+#*:''Their insolence and recklessness must be opposed, and '''better late than never'''.''
 == References ==
 <references/>
-
-[[Category:Move to Wiktionary 2007-09]]
 
 [[Category:English phrases]]
