<better late than never#3070785>

--- a/en/b/better late than never.746527.wikitext
+++ b/en/b/better late than never.746527.wikitext
@@ -5,7 +5,7 @@
 The earliest record of the phrase ''better late than never'' comes from around 27 BC in the 4th book<ref>{{cite web |url=http://mcadams.posc.mu.edu/txt/ah/Livy/Livy04.html |title=Livy's History of Rome |accessdate=May 29, 2007 |author=Butterfield, Bruce J. |date=1996 |format=HTML | publisher=Marquette University ([http://mu.edu mu.edu]) |language=English.}}</ref> of ''[[w:Ab Urbe condita (book)|Ab Urbe condita]]'' (''History of Rome'') by [[w:Livy|Titus Livius]].
 
 ===Phrase===
-'''[[better]] [[late]] than]] [[never]]'''
+'''[[better]] [[late]] than [[never]]'''
 
 # It's better do do something late, than to never do it at all.
 #*'''1996.''' Titus Livius (translation). ''Livy's History of Rome'' (in English):
