iwiki +de <Valpolicella#3076968>

--- a/en/v/Valpolicella.745851.wikitext
+++ b/en/v/Valpolicella.745851.wikitext
@@ -4,3 +4,5 @@
 '''Valpolicella''' {{m}} {{inv}}
 
 # A dry [[red wine]] made in the region of [[Verona]] from various local grape varieties and consequently of variable quality
+
+[[de:Valpolicella]]
