--- a/en/n/nebbiolo.745861.wikitext
+++ b/en/n/nebbiolo.745861.wikitext
@@ -5,3 +5,5 @@
 
 # A [[grape]] variety cultivated in the [[Langhe]]
 # A fine [[red wine]] made near [[Albese]] from these grapes
+
+[[de:nebbiolo]]
