--- a/en/b/better late than never.746527.wikitext
+++ b/en/b/better late than never.746527.wikitext
@@ -16,3 +16,5 @@ The earliest record of the phrase ''better late than never'' comes from around 2
 [[Category:English idioms]]
 [[Category:English proverbs]]
 [[Category:English phrases]]
+
+[[pl:better late than never]]
