iwiki +da <bid#3081596>

--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -136,6 +136,7 @@ From {{OE.}} verb ''[[beodan|bēodan]]'' ‘offer, announce’. Conflation from 
 [[Category:Volapük nouns]]
 
 [[ar:bid]]
+[[da:bid]]
 [[fa:bid]]
 [[fr:bid]]
 [[ko:bid]]
