--- a/en/w/West Frisian.741118.wikitext
+++ b/en/w/West Frisian.741118.wikitext
@@ -13,6 +13,7 @@ Some linguists consider West Frisian, Saterland Frisian, and North Frisian to be
 *Dutch: {{t+|nl|Fries|n}}, {{t|nl|Westerlauwers Fries|n}}
 *Finnish: [[länsifriisi]], [[länsifriisi|länsifriisin]] [[murre]]
 {{trans-mid}}
+*German: [[Friesisch]] {{n}}
 *West Frisian: {{tø|fry|Frysk}}
 {{trans-bottom}}
 
@@ -26,7 +27,6 @@ Please distinguish between the Frisian language group, the West Frisian language
 *{{ttbc|Chinese}}: [[弗里西亚语]] (fúlǐxīyà yǔ)
 *{{ttbc|Esperanto}}: [[frizona]]
 *{{ttbc|French}}: [[frison]] {{m}}
-*{{ttbc|German}}: [[Friesisch]] {{n}}
 *{{ttbc|Icelandic}}: [[frísneska]] {{f}}
 *{{ttbc|Italian}}: [[frisone]] {{m}}
 *{{ttbc|Polish}}: (język) [[fryzyjski]] {{m}}
