--- a/en/o/oblanceolate.746762.wikitext
+++ b/en/o/oblanceolate.746762.wikitext
@@ -7,3 +7,5 @@
 {{en-adj}}
 
 # {{botany}} {{context|leaves}} Of a reversed [[lanceolate]] shape: attached to the [[stem]] by the [[pointed]] end, with the other [[end]] rounded.
+
+[[vi:oblanceolate]]
