--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -79,6 +79,7 @@ From [[Middle English]] ''[[fraccioun]]'' (a breaking), from [[Anglo-Norman]], f
 * {{R:American Heritage 2000|fraction}}
 * {{R:WordNet 2003|fraction}}
 
+[[de:fraction]]
 [[et:fraction]]
 [[el:fraction]]
 [[fa:fraction]]
@@ -91,5 +92,6 @@ From [[Middle English]] ''[[fraccioun]]'' (a breaking), from [[Anglo-Norman]], f
 [[fi:fraction]]
 [[sv:fraction]]
 [[ta:fraction]]
+[[te:fraction]]
 [[vi:fraction]]
 [[zh:fraction]]
