iwiki +te <thing#3101485>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -196,6 +196,7 @@ From {{ME.}}, from {{OE.}} ''[[þing]]''.
 [[fi:thing]]
 [[sv:thing]]
 [[ta:thing]]
+[[te:thing]]
 [[vi:thing]]
 [[tr:thing]]
 [[zh:thing]]
