--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -1,11 +1,11 @@
 ==English==
 
-===Pronunciation===
-*{{audio|en-us-attend.ogg|Audio (US)}}
-*:Rhymes: [[Rhymes:English:-ɛnd|-ɛnd]]
-
 ===Etymology===
 From {{OF.}} ''[[atendre]]'' ({{F.}} ''[[attendre]]'').
+
+===Pronunciation===
+*{{audio|en-us-attend.ogg|Audio (US)}}
+*Rhymes: [[Rhymes:English:-ɛnd|-ɛnd]]
 
 ===Verb===
 {{en-verb}}
