iwiki +de, fr, io, ru, te, vi, zh <genet#3103504>

--- a/en/g/genet.746610.wikitext
+++ b/en/g/genet.746610.wikitext
@@ -4,3 +4,11 @@
 {{en-noun}}
 
 # Any of several [[Old World]] [[nocturnal]], [[carnivorous]] [[mammal]]s, of the family ''[[Viverridae]]'', that have a spotted coat and a long, ringed tail
+
+[[de:genet]]
+[[fr:genet]]
+[[io:genet]]
+[[ru:genet]]
+[[te:genet]]
+[[vi:genet]]
+[[zh:genet]]
