iwiki +te <pledge#3104347>

--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -74,5 +74,6 @@ From {{OF.}} ''[[plege]]'' (French: ''[[pleige]]'').
 [[hu:pledge]]
 [[ru:pledge]]
 [[ta:pledge]]
+[[te:pledge]]
 [[vi:pledge]]
 [[zh:pledge]]
