--- a/en/g/greenlight.746549.wikitext
+++ b/en/g/greenlight.746549.wikitext
@@ -14,3 +14,5 @@ From ''[[green light]]''.
 
 ====Synonyms====
 * {{i-c|approve}} [[allow]], [[approve]], [[give the go-ahead]], [[give the green light]], [[permit]]
+
+[[vi:greenlight]]
