--- a/en/w/woos.720091.wikitext
+++ b/en/w/woos.720091.wikitext
@@ -4,3 +4,5 @@
 '''woos'''
 
 # {{third-person singular of|[[woo]]}}
+
+# {{Australian colloquialism for coward (eg. 'Dont be a woos' 'he/she has woosed out')}}
