--- a/en/w/woos.720091.wikitext
+++ b/en/w/woos.720091.wikitext
@@ -4,3 +4,5 @@
 '''woos'''
 
 # {{third-person singular of|[[woo]]}}
+# {{Australian|colloquial}} A [[coward]]; a [[wuss]].
+#: ''Don't be a '''woos'''.''
