--- a/en/p/positronium.746650.wikitext
+++ b/en/p/positronium.746650.wikitext
@@ -4,7 +4,7 @@
 {{wikipedia}}
 {{en-noun}} (''Symbol'': [[Ps]])
 
-#{{physics}} An [[exotic atom]] consisting of a [[positron]] and an [[electron]]
+#{{physics}} An [[exotic atom]] consisting of a [[positron]] and an [[electron]], but having no [[nucleus]]
 
 ====Derived terms====
 *[[dipositronium]]
