--- a/en/u/unexpectedness.742224.wikitext
+++ b/en/u/unexpectedness.742224.wikitext
@@ -2,3 +2,7 @@
 ===Noun===
 {{en-noun|-}}
 # The state of being [[unexpected]].
+
+[[hy:unexpectedness]]
+[[vi:unexpectedness]]
+[[zh:unexpectedness]]
