--- a/en/u/unfriendliness.742226.wikitext
+++ b/en/u/unfriendliness.742226.wikitext
@@ -3,3 +3,6 @@
 {{en-noun|es|-}}
 #{{uncountable}} The state of being [[unfriendly]].
 #{{countable}} An unfriendly act.
+
+[[te:unfriendliness]]
+[[vi:unfriendliness]]
