--- a/en/u/unlikeness.742240.wikitext
+++ b/en/u/unlikeness.742240.wikitext
@@ -3,3 +3,8 @@
 {{en-noun|es|-}}
 #{{uncountable}} The state of being [[unlike]].
 #{{countable}} An unlike characteristic.
+
+[[de:unlikeness]]
+[[io:unlikeness]]
+[[vi:unlikeness]]
+[[zh:unlikeness]]
