--- a/en/p/pusillanimity.741240.wikitext
+++ b/en/p/pusillanimity.741240.wikitext
@@ -1,9 +1,25 @@
-[[Category:Move to Wiktionary 2007-09]]
+==English==
+===Noun===
+'''pusillanimity'''
+# The quality or state of being [[pusillanimous]]; [[pusillanimousness]].
+* '''1685'''.  [[w:Miguel de Molinos|Dr. Michael de Molinos]]: ''The Spiritual Guide which Disentangles the Soul, and Brings it by the Inward Way To The Getting of Perfect Contemplation and the Rich Treasure of Internal Peace'', CHAP. XVIII: [http://www.ccel.org/ccel/molinos/guide.html].
+*:132. And although thou often fallest, and seest thy '''Pusillanimity''', and endeavour to get courage, and afflict not thy self; because what God doth not do in forty Years, he sometimes doth in an instant, with a particular Mystery, that we may live low and humble, and know that ‘tis the Work of his powerful Hand, to free us from Sins.
 
-'''Pusillanimity''' (from the ecclesiastical Latin pusillanimis, a translation of the Greek olugopsukhos), from pusillus ‘very small’ + animus ‘mind,’ + -ous) is the vice of being timid and cowardly, and thus not living up to one's full [[potential]]. It's antithesis is [[magnanimity]], as defined by [[Aristotle]] in his [[Nicomachean Ethics]].
+====Related terms====
+*[[pusillanimous]]
+*[[pusillanimousness]]
+*[[cowardice]]
+*[[cowardliness]]
+*[[cravenness]]
+*[[faint-heartedness]]
 
-As an adjective, the concept is expressed as "pusillanimous," i.e. "He is rather pusillanimous."
+[[Category:English nouns]]
+[[Category:English abstract nouns]]
 
-[[Category:Vice]]
-[[Category:Aristotle]]
-[[Category:Rhetoric]]
+[[et:pusillanimity]]
+[[io:pusillanimity]]
+[[ru:pusillanimity]]
+[[fi:pusillanimity]]
+[[te:pusillanimity]]
+[[vi:pusillanimity]]
+[[zh:pusillanimity]]
