--- a/en/u/unrighteousness.742246.wikitext
+++ b/en/u/unrighteousness.742246.wikitext
@@ -2,3 +2,7 @@
 ===Noun===
 {{en-noun|-}}
 # The state of being [[unrighteous]].
+
+[[te:unrighteousness]]
+[[vi:unrighteousness]]
+[[zh:unrighteousness]]
