--- a/en/q/quatorze.26056.wikitext
+++ b/en/q/quatorze.26056.wikitext
@@ -41,6 +41,7 @@ From the Latin ''[[quattuordecim]]'' meaning fourteen.
 [[ja:quatorze]]
 [[pl:quatorze]]
 [[pt:quatorze]]
+[[ro:quatorze]]
 [[ru:quatorze]]
 [[fi:quatorze]]
 [[sv:quatorze]]
