iwiki +de, ro, te <rabbit#3121793>

--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -181,6 +181,7 @@ From [[Cockney rhyming slang]] ''rabbit and pork'', to talk.
 [[ar:rabbit]]
 [[zh-min-nan:rabbit]]
 [[bg:rabbit]]
+[[de:rabbit]]
 [[el:rabbit]]
 [[es:rabbit]]
 [[fa:rabbit]]
@@ -192,10 +193,12 @@ From [[Cockney rhyming slang]] ''rabbit and pork'', to talk.
 [[nl:rabbit]]
 [[pl:rabbit]]
 [[pt:rabbit]]
+[[ro:rabbit]]
 [[ru:rabbit]]
 [[fi:rabbit]]
 [[sv:rabbit]]
 [[ta:rabbit]]
+[[te:rabbit]]
 [[vi:rabbit]]
 [[tr:rabbit]]
 [[zh:rabbit]]
