--- a/en/r/reaffirmation.741520.wikitext
+++ b/en/r/reaffirmation.741520.wikitext
@@ -2,3 +2,6 @@
 ===Noun===
 {{en-noun}}
 # An act of [[reaffirm]]ing; a second or subsequent [[affirmation]].
+
+[[vi:reaffirmation]]
+[[zh:reaffirmation]]
