iwiki +vi, zh <recalculation#3124738>

--- a/en/r/recalculation.741532.wikitext
+++ b/en/r/recalculation.741532.wikitext
@@ -2,3 +2,6 @@
 ===Noun===
 {{en-noun}}
 # The act of [[recalculate|recalculating]]; a second or subsequent [[calculation]].
+
+[[vi:recalculation]]
+[[zh:recalculation]]
