tidy up, use templates <Ulster Irish#3125877>

--- a/en/u/Ulster Irish.742124.wikitext
+++ b/en/u/Ulster Irish.742124.wikitext
@@ -1,12 +1,11 @@
 ==English==
 
 ===Proper noun===
-'''[[Ulster]] [[Gaelic]]'''
+{{en-proper noun|sg=[[Ulster]] [[Gaelic]]}}
 
 # A dialect of the [[Irish]] [[Gaelic]] language indigenous to Ulster.
 
 ====Usage notes====
-
-This is more commonly referred to as [[Ulster Irish]] which distinguishes it from [[Ulster Scots]] Gaelic.
+This is more commonly referred to as {{term|Ulster Irish}} which distinguishes it from {{term|Ulster Scots}} Gaelic.
 
 [[Category:Dialects]]
