/* Translations */ +Czech <theory#3127362>

--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -111,6 +111,7 @@ English since 1613, from French ''[[théorie]]'' < Latin ''[[theoria]]'' < Greek
 {{trans-top|a coherent set of statements attempting to explain observed phenomena}}
 *Arabic: {{ARchar|[[نظرية]]}} {{unicode|(naʐaríya)}} {{f}}
 *Croatian: {{t|hr|teorija|f}}
+*Czech: [[teorie]] {{f}}
 *Dutch: [[theorie]]
 *Finnish: [[teoria]]
 *French: [[théorie]] {{f}}
