--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -30,7 +30,7 @@
 {{trans-top|force due to gravity}}
 *Chinese (Simplified): 重量 (zhòng liàng)
 *Dutch: [[gewicht]]
-*Ewe: [[kpekpeme]] {{n}}
+*[[Ewe]]: [[kpekpeme]] {{n}}
 *Finnish: [[paino]]
 *French: [[poids]]
 *German: [[Gewicht]] {{n}}
