iwiki +vi <woos#3134789>

--- a/en/w/woos.720091.wikitext
+++ b/en/w/woos.720091.wikitext
@@ -6,3 +6,5 @@
 # {{third-person singular of|[[woo]]}}
 # {{Australian|colloquial}} A [[coward]]; a [[wuss]].
 #: ''Don't be a '''woos'''.''
+
+[[vi:woos]]
