--- a/en/i/itself.7369.wikitext
+++ b/en/i/itself.7369.wikitext
@@ -26,8 +26,10 @@
 [[io:itself]]
 [[hu:itself]]
 [[ja:itself]]
+[[pl:itself]]
 [[simple:itself]]
 [[fi:itself]]
 [[ta:itself]]
+[[te:itself]]
 [[tr:itself]]
 [[zh:itself]]
