iwiki +fr, io <leave out#3142331>

--- a/en/l/leave out.741825.wikitext
+++ b/en/l/leave out.741825.wikitext
@@ -5,3 +5,6 @@
 
 # To [[omit]], to not [[include]]
 #:''The journalist decided to '''leave out''' the sleaze from her story.''
+
+[[fr:leave out]]
+[[io:leave out]]
