trans link [[Isthmus Zapotec]], trans link [[Sardinian]] <squirrel#3150167>

--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -1,6 +1,7 @@
 {{wikipedia}}
 [[Image:Sciurus carolinensis.jpg|thumb|An Eastern Gray Squirrel]]
 ==English==
+
 ===Etymology===
 From {{AF.}} ''[[esquirel]]'', from {{OF.}} ''[[escurel]]'' (''[[écureuil]]'').
 
@@ -46,7 +47,7 @@ From {{AF.}} ''[[esquirel]]'', from {{OF.}} ''[[escurel]]'' (''[[écureuil]]'').
 *Icelandic: [[íkorni]] {{m}}
 *[[Interlingua]]: [[sciuro]], [[scuriolo]]
 *Irish: [[iora]], [[madra crainn]] {{g|Irish}}
-*Isthmus Zapotec: [[chisa]]
+*[[Isthmus Zapotec]]: [[chisa]]
 *Italian: [[scoiattolo]] {{m}}
 *Japanese: [[栗鼠]] (りす, risu)
 *Korean: [[다람쥐]] (daramjwi)
@@ -70,7 +71,7 @@ From {{AF.}} ''[[esquirel]]'', from {{OF.}} ''[[escurel]]'' (''[[écureuil]]'').
 *[[Romansh]]: [[stgilat]] {{m}}
 *Russian: [[белка]] (bélka) {{f}}
 *[[Sami]]: [[oarri]]
-*Sardinian: [[schirrittu]] {{m}}, [[schirrimatta]] {{f}}, [[iscojàttulu]] {{m}}
+*[[Sardinian]]: [[schirrittu]] {{m}}, [[schirrimatta]] {{f}}, [[iscojàttulu]] {{m}}
 *Scottish: [[feòrag]]
 *Serbian:
 *:Cyrillic: [[веверица]] {{f}}, [[вевер]] {{m}}
