sort iwikis <partage#3150759>

--- a/en/p/partage.741229.wikitext
+++ b/en/p/partage.741229.wikitext
@@ -1,6 +1,18 @@
-[[Category:Move to Wiktionary 2007-09]]
-'''Partage''' is an antiquated [[archaeology|archaeological]] term referring to the one-time standard practice of the divvying up of [[artifact]]s between archaeologists, their patrons and the host territory.
+==French==
 
-{{unreferenced|date=September 2007}}
-[[Category:Archaeology]]
-{{Importance|date=September 2007}}
+===Etymology===
+{{-age|partir}}
+
+===Noun===
+'''partage''' {{m}}
+
+# [[sharing]]
+
+[[Category:French nouns]]
+
+[[et:partage]]
+[[fr:partage]]
+[[io:partage]]
+[[id:partage]]
+[[ru:partage]]
+[[vi:partage]]
