<go off at score#3151853>

--- a/en/g/go off at score.741414.wikitext
+++ b/en/g/go off at score.741414.wikitext
@@ -1,7 +1,6 @@
 ==English==
 
-===Verb phrase===
-{{rfc-xphrase|Verb phrase}}
+===Verb===
 '''to [[go]] [[off]] [[at]] [[score]]'''
 
 # {{idiom}} Of a horse, to break suddenly into a gallop; of a person, suddenly to say or do something impentuous.
