--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -23,6 +23,7 @@
 *:Tis hard to say, how much these Arse-wormes do urge us, We now need no '''Quack''' but these Jacks for to purge us, [...]
 *'''1720''': William Derham, ''Physico-theology''
 *:After ſome Months, the '''Quack''' gets privately to Town, [...]
+Quack is a funny word to say alot.
 
 ====Translations====
 {{trans-top|sound made by a duck}}
