i-c to sense <musclebrain#3159264>

--- a/en/m/musclebrain.746557.wikitext
+++ b/en/m/musclebrain.746557.wikitext
@@ -10,7 +10,7 @@ From {{term|muscle}} + {{term|brain}}
 # {{context|US|slang|pejorative}} A large, strong, but [[inept]], [[bumbling]], [[buffoon]]ish or [[unintelligent]] [[man]]
 
 ====Synonyms====
-# {{i-c|participant in physical sports}} [[athlete]]
-# {{i-c|idiot}} [[bruiser]], [[dumbbell]], [[moron]], [[buffoon]], [[dimwit]], [[pinhead]]
+# {{sense|participant in physical sports}} [[athlete]]
+# {{sense|idiot}} [[bruiser]], [[dumbbell]], [[moron]], [[buffoon]], [[dimwit]], [[pinhead]]
 
 [[Category:Sports]]
