/* Translations to be checked */ <island#3160168>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -74,8 +74,8 @@
 =====Translations to be checked=====
 {{checktrans}}
 {{trans-top|translations to be checked}}
-*{{ttbc|Ainu}}: [[モシリ|モシ<small>リ</small>]] (moshir)
-*{{ttbc|Arabic}}: {{ARchar|[[جزيرة|جَزِيرَة]]}} {{unicode|(jazíːra)}} {{f}}, {{ARchar|[[جزائر|جَزَائِر]]}} {{unicode|(jazáː’ir)}} {{p}}, {{ARchar|[[جزر|جُزُر]]}} (júzur) {{p}}
+*{{ttbc|Ainu}}: [[モシリ|モシ<span style="font-size:70%;">リ</span>]] (moshir)
+*{{ttbc|Arabic}}: {{ARchar|[[جزيرة|جَزِيرَة]]}} {{unicode|(jazīra)}} {{f}}, {{ARchar|[[جزائر|جَزَائِر]]}} {{unicode|(jazā’ir)}} {{p}}, {{ARchar|[[جزر|جُزُر]]}} (júzur) {{p}}
 *{{ttbc|Basque}}: [[irla]], [[uharte]]
 *{{ttbc|Bosnian}}: [[ostrvo#Bosnian|ostrvo]] {{n}}
 *{{ttbc|Catalan}}: [[illa]] {{f}}
