<whatever it takes#3161194>

--- a/en/w/whatever it takes.775539.wikitext
+++ b/en/w/whatever it takes.775539.wikitext
@@ -1,8 +1,8 @@
-{{en-noun}}
-
 #:We stand ready to do whatever it takes to accomplish this purpose.
 ==== Translations ====
 * Spanish: [[todo lo que sea  necesario]].
 
 ==== See also ====
 * [[w:Whatever It Takes|whatever it takes]]
+
+[[Category:English idioms]]
