<whatever it takes#3161196>

--- a/en/w/whatever it takes.775539.wikitext
+++ b/en/w/whatever it takes.775539.wikitext
@@ -3,6 +3,6 @@
 * Spanish: [[todo lo que sea  necesario]].
 
 ==== See also ====
-* [[w:Whatever It Takes|whatever it takes]]
+* [[w:Whatever It Takes|Whatever It Takes]]
 
 [[Category:English idioms]]
