--- a/en/s/silly billy.741407.wikitext
+++ b/en/s/silly billy.741407.wikitext
@@ -3,4 +3,4 @@
 ===Noun===
 {{en-noun|silly billies}}
 
-# A [[foolish]] person.
+# {{alternative spelling of|Silly Billy}} (a silly or foolish person)
