/* English */ Etym <Tyneside#3162022>

--- a/en/t/Tyneside.773762.wikitext
+++ b/en/t/Tyneside.773762.wikitext
@@ -1,10 +1,13 @@
 ==English==
 {{wikipedia}}
 
+===Etymology===
+From (River) {{term|Tyne}} + {{term|side}}.
+
 ===Proper noun===
 {{en-proper noun}}
 
-# A conurbation in the Northeast of England, covering part of the area of Tyne and Wear. It includes all settlements on the banks of the River Tyne.
+# A conurbation in the Northeast of [[England]], covering part of the area of [[Tyne and Wear]]. It includes all settlements on the banks of the River [[Tyne]].
 
 ====See also====
 *[[Gateshead]]
