--- a/en/d/degunking.773761.wikitext
+++ b/en/d/degunking.773761.wikitext
@@ -6,4 +6,4 @@
 # {{present participle of|[[degunk]]}}
 
 ===Translations===
-{{trans-top|greater efficiency and cleansing}}
+{{trans-top|Greater efficiency and cleansing. This term usually is used in computer science idioma.}}
