/* Etymology */ <Faraday rotation#3162926>

--- a/en/f/Faraday rotation.774454.wikitext
+++ b/en/f/Faraday rotation.774454.wikitext
@@ -1,7 +1,7 @@
 ==English==
 ===Etymology===
 
-From [[w:Michael Faraday]], who first described the effect.
+From [[w:Michael Faraday|Michael Faraday]], who first described the effect.
 
 ===Noun===
 {{en-noun|sg=[[Faraday]] [[rotation]]}}
