--- a/en/c/case history.773767.wikitext
+++ b/en/c/case history.773767.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Noun===
-{{en-noun|sg=[[case]] [[history]]|case history}}
+{{en-noun|sg=[[case]] [[history]]|case histories}}
 
 # The details of the [[history]] of some [[case]] (often [[medical]]).
 #: ''After consulting her '''case history''', the doctor prescribed methotrexate.''
