--- a/en/c/chebang.774880.wikitext
+++ b/en/c/chebang.774880.wikitext
@@ -6,5 +6,4 @@
 # {{archaic}} {{alternative spelling of|shebang}}
 
 ===References===
-*[http://www.takeourword.com/TOW193/page2.html Take our Word] 
-*[http://www.wordorigins.org/ Word Origins]
+*[http://www.wordorigins.org/index.php/search/results/d0f726ad7032e2c9085872a9168e18df/ Word Origins]
