<vote with one's feet#3163922>

--- a/en/v/vote with one's feet.774902.wikitext
+++ b/en/v/vote with one's feet.774902.wikitext
@@ -7,8 +7,7 @@
 #*'''2002''', Jim Cramer, ''Confessions of a Street Addict'', Simon and Schuster, ISBN 0743224884, page 104,
 #*:Then again, I knew that shareholder democracy meant only that I should '''vote with my feet''' if I didn't like what management was doing.
 #*'''2005''', Diane E. Davis, ''Political Power and Social Theory'', Elsevier, ISBN 0762311908, page 188,
-#*:The conventional wisdom ca. 1980 was that if an investor did not like the way a firm was managed, she could
-'''vote with her feet''', moving her money elsewhere.
+#*:The conventional wisdom ca. 1980 was that if an investor did not like the way a firm was managed, she could '''vote with her feet''', moving her money elsewhere.
 #{{idiom}} To show support for something by [[go]]ing to or otherwise being [[present]] somewhere.
 #*'''1973''' April 2, "The Ph.D. Glut", [[w:Time (magazine)|''Time'']],
 #*:That would enable the students to "'''vote with their feet'''" for programs of proven excellence and presumably for fields where the most jobs are available.
