--- a/en/t/trick out.774631.wikitext
+++ b/en/t/trick out.774631.wikitext
@@ -2,21 +2,15 @@
 ==English==
 
 ===Verb===
-to trick out
+''to'' '''[[trick]] [[out]]'''
 
 # {{transitive}}{{slang}} '''to trick out'''; to [[mod]] or customize an object, typically for the purpose of both personalization as well as enhancing the object's performance capabilities and more particularly for the purpose of performing stunts with that object.
 #: ''His friends were particularly impressed with the way he '''tricked out''' his [[wikipedia:Honda_Ruckus|Ruckus]].''
 
+===Derived terms===
+* [[tricked out]]  {{pos_a}}; heavily modified
+
 ====Synonyms====
-*(''to trick out''): [[mod]]
-
-===Adjective===
-trick out
-
-# {{slang}} Heavily modified.
-#: ''He brought his '''tricked out''' bike.''
-
-===Related terms===
-*[[modified]]
-*[[modded]]
-*[[mod]]
+* [[customize]]
+* [[modify]]
+* [[mod]]
