+{{rfc-level|Synonyms at L4+ not in L3 POS section (AutoFormat would have corrected level of Derived terms)}} <trick out#3164233>

--- a/en/t/trick out.774631.wikitext
+++ b/en/t/trick out.774631.wikitext
@@ -11,6 +11,7 @@
 * [[tricked out]]  {{pos_a}}; heavily modified
 
 ====Synonyms====
+{{rfc-level|Synonyms at L4+ not in L3 POS section (AutoFormat would have corrected level of Derived terms)}}
 * [[customize]]
 * [[modify]]
 * [[mod]]
