--- a/en/l/lexer.775133.wikitext
+++ b/en/l/lexer.775133.wikitext
@@ -6,6 +6,9 @@
 
 # {{computing}} A [[computer program]] that preforms [[lexical analysis]].
 
+====Synonyms====
+* [[lexical analyzer]]
+
 ====Translations====
 {{trans-top|computer program}}
 *Croatian: {{t|hr|lekser|m}}
