--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -21,18 +21,19 @@ From {{OF.}} ''[[plege]]'' (French: ''[[pleige]]'').
 *German: {{t|de|zusichern}}, {{t|de|versprechen}}
 {{trans-mid}}
 *Serbian: [[zaloga]], [[zavet]]
+*Slovene: [[zapriseči]], [[zavezati se]], [[zaobljubiti se]]
 {{trans-bottom}}
 
 {{trans-top|To deposit something as a security; to pawn}}
 *Finnish: [[pantata]]
 {{trans-mid}}
 *German: {{t|de|verpfänden}}
+*Slovene: [[zastaviti]]
 {{trans-bottom}}
 
 ====Translations to be checked====
 {{checktrans}}
 *{{ttbc|French}}: [[promettre]]
-*{{ttbc|Slovene}}: [[zapriseči]] (1), [[zavezati se]] (1), [[zaobljubiti se]] (1)
 
 ===Noun===
 {{en-noun}}
