--- a/en/p/planter box.775381.wikitext
+++ b/en/p/planter box.775381.wikitext
@@ -1,1 +1,1 @@
-a planter box is a object that contains some form of vegetation or flora plant. often the planter box is used to complimant the flowers or vegetation inside the container.
+a planter box is a object that contains some form of vegetation or flora plant. often the planter box is used to complimant the flowers or vegetation inside the container. usually the planter box is set in a yard where it draws attention top itself accenting its colors and making the yard seem more enlightened and vibrant making it an all around nice scenary
