--- a/en/p/planter box.775381.wikitext
+++ b/en/p/planter box.775381.wikitext
@@ -2,6 +2,8 @@
 ==English==
 
 ===Noun===
-{{en-noun|sg=[[planter]] [[box]]}}
+{{en-noun|sg=[[planter]] [[box]]|pl=planter boxes}}
 
 # A [[flower box]]; an object that contains live flowers, usually affixed outside, just below a window.
+#* '''1897,''' Hon. Stuart Brown, “Indian Corn—Its Cultivation and Uses”, read before the [[w:Sangamon County, Illinois|Sangamon County]] Farmers Institute, in Charles F. Mills (ed.), ''Annual Report, Illinois Farmer’s Institute, with Reports of County Farmers’ Institutes, for the Year 1897'', Phillips Bros., [http://books.google.com/books?id=pX00AAAAMAAJ&amp;pg=PA115&amp;dq=%22planter+box%22 page 115],
+#*: Cross fertilization <!-- [sic] written as two words --> has generally given greater yields. It is done by planting with one variety in one '''planter box''' and another variety in the other.
