--- a/en/t/tattling.775517.wikitext
+++ b/en/t/tattling.775517.wikitext
@@ -1,8 +1,6 @@
 ==English==
 
-===Etymology===
-
 ===Verb===
-''tattling'''
+'''tattling'''
 
-# {{present participle of|tattle}}.
+# {{present participle of|tattle}}
