--- a/en/m/mind-numbing.775549.wikitext
+++ b/en/m/mind-numbing.775549.wikitext
@@ -2,5 +2,7 @@
 
 ===Adjective===
 '''[[mind]]-[[numbing]]'''
-# {{idiom}} Excessively [[boring]]; of an [[activity]], etc., lacking any [[interest]] or [[variety]] that might serve as [[intellectual]] [[stimulation]]. 
+# {{idiom}} Excessively [[boring]], [[tedious]], or [[dull]]; [[repetitive]]; of an [[activity]], etc., lacking any [[interest]] or [[variety]] that might serve as [[intellectual]] [[stimulation]]. 
 #:''After hours of '''mind-numbing''' work sorting hundreds of nearly identical form, he needed to stop and do something else.''
+#So overly [[intricate]] or [[detailed]], or [[complicated]] as to be [[incomprehensible]]. 
+#:''The story described the main character's wristwatch in '''mind-numbing''' detail.''
