expand <lead time#3166198>

--- a/en/l/lead time.775552.wikitext
+++ b/en/l/lead time.775552.wikitext
@@ -3,5 +3,5 @@
 
 ===Noun===
 {{en-noun|sg=[[lead]] [[time]]}}
-#{{idiom}} The amount of time between the [[initiation]] of some [[process]] and its [[completion]], e.g. the time required to [[manufacture]] or [[procure]] a product.
+#{{idiom}} The amount of time between the [[initiation]] of some [[process]] and its [[completion]], e.g. the time required to [[manufacture]] or [[procure]] a product; the time required before something can be [[provided]] or [[delivered]].
 #:''It's an excellent device, but it has a 10-week '''lead time''', so be sure to order it in advance.''
