--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -25,7 +25,7 @@
 ====Translations====
 {{trans-top|commercial solicitation}}
 *Arabic: [[إِعْلان]] , [[إِيذان]]
-*Breton: [[bruderezh]] {{m}}
+*[[Breton]]: [[bruderezh]] {{m}}
 *Bulgarian: [[реклама]] {{f}}
 *Croatian: [[reklama]]
 *Czech: [[reklama]] {{f}}
@@ -34,13 +34,13 @@
 *Estonian: [[reklaam]],[[propaganda]],[[kuulutus]]
 *Finnish: [[mainos]], [[mainostus]]
 *French: [[publicité]] {{f}}, [[pub]] {{f}}, [[annonce]] {{f}}
-*Frisian: [[advertinsje]], [[oankundiging]]
+*[[Frisian]]: [[advertinsje]], [[oankundiging]]
 *German: [[Anzeige]] {{f}}, [[Werbung]] {{f}}, [[Annonce]] {{f}}, [[Reklameanzeige]] {{f}}
 *Greek: [[διαφήμιση]] (diafimisi) {{f}}
 *Hebrew: [[פרסומת]] (pirsomet) {{f}}
 *Hungarian: [[hirdetés]], [[reklám]]
 *Indonesian: [[iklan]], [[reklame]]
-*Interlingua: [[annuncio]], [[publicitate]], [[reclamo]], [[propaganda]]
+*[[Interlingua]]: [[annuncio]], [[publicitate]], [[reclamo]], [[propaganda]]
 *Italian: [[annuncio]] {{m}}, [[pubblicità]] {{f}}
 {{trans-mid}}
 *Japanese: [[広告]] (こうこく, kōkoku), [[CM]] (シーエム, shī-emu)
@@ -58,11 +58,11 @@
 *Slovene: [[oglas]] {{m}}, [[reklama]] {{f}}
 *Spanish: [[anuncio]] {{m}},  [[publicidad]] {{f}}, [[reclamo]] {{m}}
 *Swedish: [[annons]], [[annonsering]], [[reklam]]
-*Tamil: விளம்பரம்
-*Telugu: [[వ్యాపార ప్రకటన]]
+*[[Tamil]]: விளம்பரம்
+*[[Telugu]]: [[వ్యాపార ప్రకటన]]
 *Turkish: [[reklâm]], [[ilan]], [[duyuru]]
 *Vietnamese: [[quảng cáo]], [[giới thiệu]]
-*Volapük: [[noted]], [[reklam]], [[nunam]]
+*[[Volapük]]: [[noted]], [[reklam]], [[nunam]]
 {{trans-bottom}}
 
 {{trans-top|public notice}}
