--- a/en/l/literary agent.776088.wikitext
+++ b/en/l/literary agent.776088.wikitext
@@ -4,3 +4,9 @@
 '''[[literary]] [[agent]]'''
 
 # A person who represents writers and their written works to publishers and film producers and assists in the sale and deal negotiation of the same.
+
+====Translations====
+{{trans-top|person who represents writers}}
+*Czech: [[literární agent]] {{m}}
+{{trans-mid}}
+{{trans-bottom}}
