--- a/en/s/see stars.776097.wikitext
+++ b/en/s/see stars.776097.wikitext
@@ -4,6 +4,6 @@
 *[[sea stars]]
 
 ===Verb===
-'''to [[see]] [[star]]s'''
+{{en-verb|inf=to [[see]] [[stars]]|[[sees]] stars|[[seeing]] stars|[[saw]] stars|[[seen]] stars}}
 
 # To receive a blow to the [[head]] and, as a result, appear to see flashing lights
