--- a/en/e/energy source.776613.wikitext
+++ b/en/e/energy source.776613.wikitext
@@ -3,5 +3,4 @@
 ===Noun===
 {{en-noun}}
 
-# source from which useful energy can be extracted or recovered either directly or by means of a conversion or
-transformation process (e.g. solid fuels, liquid fuels, solar energy, biomass, etc.)
+# source from which useful energy can be extracted or recovered either directly or by means of a conversion or transformation process (e.g. solid fuels, liquid fuels, solar energy, biomass, etc.)
