--- a/en/f/forty-ninth parallel.776643.wikitext
+++ b/en/f/forty-ninth parallel.776643.wikitext
@@ -2,7 +2,7 @@
 {{wikipedia|49th parallel north}}
 
 ===Noun===
-{{en-noun|-}}
+{{en-noun|sg=[[forty]]-[[ninth]] [[parallel]]|-}}
 
 # {{context|Canada|US}} A [[nickname]] for the approximately 1200-[[mile]] (1900-[[kilometer]]) portion of the [[border]] between [[Canada]] and the [[USA]], extending along the forty-ninth parallel of [[latitude]] from Lake of the Woods to the [[Pacific Ocean]].
 # {{context|Canada|US|nonstandard}}  A [[nickname]] for the entire border between Canada and the USA.
