--- a/en/s/superchondritic.776729.wikitext
+++ b/en/s/superchondritic.776729.wikitext
@@ -11,7 +11,7 @@
 *{{rhymes|ɪtɪk}}
 
 ===Adjective===
-{{en-adj}}
+{{en-adj|-}}
 
 #{{planetology|of an elemental ratio}} Greater than found in a typical [[chondrite]].
 
