--- a/en/g/grid electricity.776660.wikitext
+++ b/en/g/grid electricity.776660.wikitext
@@ -1,6 +1,6 @@
 ==English==
 
 ===Noun===
-{{en-noun}}
+'''[[grid]] [[electricity]]'''
 
 # energy delivered to a building from the [[w:public electricity network|public electricity network]].
