clean up <Bosphorus#3168651>

--- a/en/b/Bosphorus.776975.wikitext
+++ b/en/b/Bosphorus.776975.wikitext
@@ -1,5 +1,8 @@
+==English==
 {{rfv}}
-{{rfc}}
-{{nolanguage/box}}
-[[Category:Requests for language cleanup October]]
- The Bosporus are a set of straits that run through Istanbul, separating Europe and Asia.
+
+===Proper noun===
+{{wikipedia}}
+{{en-proper noun|sg=The Bosporus}}
+
+# A [[strait]] that passes through [[Istanbul]] (formerly [[Constantinople]]) from the [[Black Sea]] to the [[Sea of Marmara]], forming part of the traditional boundary between [[Europe]] and [[Asia]].
