--- a/en/b/Bosphorus.776975.wikitext
+++ b/en/b/Bosphorus.776975.wikitext
@@ -9,7 +9,7 @@
 
 ====Translations====
 {{trans-top}}
-*Arabic: {{Arab|[[مضيق بوسفور]]}} {{IPAchar|()}} {{m}}
+*Arabic: {{Arab|[[مضيق بوسفور]]}} {{IPAchar|(maɖīq búsfor)}} {{m}}
 *Asturian: [[Bósforo]] {{m}}
 *Azerbaijani: [[Bosfor Boğazı]]
 *Bosnian: [[Bosfor]] {{m}}
