--- a/en/b/Bosphorus.776975.wikitext
+++ b/en/b/Bosphorus.776975.wikitext
@@ -24,13 +24,13 @@
 *French: [[Bosphore]] {{m}}
 *Galician: [[Bósforo]] {{m}}
 *Georgian: [[ბოსფორი]] (bosp‘ori)
-*Greek: [[Βόσπορος]] (Vósporos)
+*Greek: [[Βόσπορος]] (Vósporos) {{m}}
 *Hebrew: [[בוספורוס]] (bosporus) {{m}}
 *Hindi: [[बोस्पोरुस जलसन्धि]]
 *Hungarian: [[Boszporusz]]
 *Icelandic: [[Bosporussund]]
-{{trans-mid}}
 *Indonesian: [[Selat Bosporus]]
+{{trans-mid}}
 *Italian: [[Bosforo]] {{m}}
 *Japanese: [[ボスポラス海峡]] (ボスポラスかいきょう, bosuporasu kaikyō)
 *Korean: [[보스포루스 해협]] (boseuporuseu haehyeop)
