--- a/en/b/Bosphorus.776975.wikitext
+++ b/en/b/Bosphorus.776975.wikitext
@@ -7,7 +7,7 @@
 # A [[strait]] that passes through [[Istanbul]] (formerly [[Constantinople]]) from the [[Black Sea]] to the [[Sea of Marmara]], forming part of the traditional boundary between [[Europe]] and [[Asia]].
 
 ====Translations====
-{{trans-top|A straight that passes through Istanbul}}
+{{trans-top|A strait that passes through Istanbul}}
 *Arabic: {{Arab|[[مضيق بوسفور]]}} {{IPAchar|(maɖīq búsfor)}} {{m}}
 *Asturian: [[Bósforo]] {{m}}
 *Azerbaijani: [[Bosfor Boğazı]]
