/* Proper noun */ "the", not "The" <Bosphorus#3169220>

--- a/en/b/Bosphorus.776975.wikitext
+++ b/en/b/Bosphorus.776975.wikitext
@@ -5,7 +5,7 @@
 
 ===Proper noun===
 {{wikipedia|Bosporus}}
-{{en-proper noun|sg=The Bosphorus}}
+{{en-proper noun|sg=the Bosphorus}}
 
 # A [[strait]] that passes through [[Istanbul]] (formerly [[Constantinople]]) from the [[Black Sea]] to the [[Sea of Marmara]], forming part of the traditional boundary between [[Europe]] and [[Asia]].
 
