--- a/en/b/Bosphorus.776975.wikitext
+++ b/en/b/Bosphorus.776975.wikitext
@@ -12,19 +12,19 @@
 ====Translations====
 {{trans-top|A strait that passes through Istanbul}}
 *Arabic: {{Arab|[[مضيق بوسفور]]}} {{IPAchar|(maɖīq búsfor)}} {{m}}
-*Asturian: [[Bósforo]] {{m}}
+*[[Asturian]]: [[Bósforo]] {{m}}
 *Azerbaijani: [[Bosfor Boğazı]]
 *Bosnian: [[Bosfor]] {{m}}
-*Breton: [[Bosfor]]
+*[[Breton]]: [[Bosfor]]
 *Bulgarian: [[Босфор]] {{m}}
-*Catalan: [[Bòsfor]] {{m}}
+*[[Catalan]]: [[Bòsfor]] {{m}}
 *Chinese: [[博斯普鲁斯海峡]] (Bósīpǔlǔsī hǎixiá)
 *Croatian: [[Bospor]] {{m}}
 *Czech: [[Bospor]] {{m}}
 *Esperanto: [[Bosporo]]
 *Finnish: [[Bosporinsalmi]]
 *French: [[Bosphore]] {{m}}
-*Galician: [[Bósforo]] {{m}}
+*[[Galician]]: [[Bósforo]] {{m}}
 *Georgian: [[ბოსფორი]] (bosp‘ori)
 *Greek: [[Βόσπορος]] (Vósporos) {{m}}
 *Hebrew: {{t|he|sc=Hebr|בוספורוס|alt=בּוֹסְפּוֹרוּס|tr=bosporus}} {{m}}
@@ -38,7 +38,7 @@
 *Korean: [[보스포루스 해협]] (boseuporuseu haehyeop)
 *Kurdish: [[Tengava Stenbol]]
 *Lithuanian: [[Bosforo sąsiauris]]
-*Occitan: [[Bosfòr]] {{m}}
+*[[Occitan]]: [[Bosfòr]] {{m}}
 *Persian: {{fa-Arab|[[تنگه بسفر]]}} (tanga bosfor)
 *Polish: [[Bosfor]] {{m}}
 *Portuguese: [[Bósforo]] {{m}}
