--- a/en/m/marmot.8229.wikitext
+++ b/en/m/marmot.8229.wikitext
@@ -45,7 +45,7 @@
 *[[Friulian]]: [[marmote]]
 *[[Gallegan]]: [[marmota]]
 *German: [[Murmeltier]] {{n}}
-*Greek, Modern: [[αρμότες]] (armotes)
+*Greek: [[αρκτόμυς]] (arktómys) {{m}}, [[μαρμότα]] (marmóta) {{f}}
 *Hungarian: [[mormota]]
 *Icelandic: [[múrmeldýr]]
 *Irish: [[marmat]]
