--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -15,7 +15,7 @@
 # (''specifically'') A young swine, a [[piglet]].
 # {{uncountable}} The [[edible]] [[meat]] of such an animal; [[pork]].
 #:* Some religions prohibit their adherents from eating '''pig'''.
-# A [[STUPID!]] person; someone who overeats or eats rapidly and noisily.
+# A [[greedy]] person; someone who overeats or eats rapidly and noisily.
 #:* You gluttonous '''pig'''! Now that you've eaten all the cupcakes, there will be none for the party!
 # A [[nasty]] or [[disgusting]] person.
 #:* She considered him a '''pig''' as he invariably stared at her bosom when they talked.
