iwiki +de, ru <Smalltalk#3181087>

--- a/en/s/Smalltalk.775101.wikitext
+++ b/en/s/Smalltalk.775101.wikitext
@@ -5,3 +5,6 @@
 {{en-proper-noun}}
 
 # {{computing}} An [[object-oriented]], [[dynamically typed]], [[reflective]] [[programming language]].
+
+[[de:Smalltalk]]
+[[ru:Smalltalk]]
