--- a/en/d/detrital.776653.wikitext
+++ b/en/d/detrital.776653.wikitext
@@ -19,3 +19,9 @@ passage=The light-chestnut soils are much more '''detrital''' than the chestnut 
 
 ====See also====
 *{{pedialite|Detritus (geology)}}
+
+[[ar:detrital]]
+[[fa:detrital]]
+[[it:detrital]]
+[[vi:detrital]]
+[[zh:detrital]]
