--- a/en/m/mousepox.775844.wikitext
+++ b/en/m/mousepox.775844.wikitext
@@ -4,3 +4,6 @@
 {{en-noun|-}}
 
 # A [[skin]] [[disease]] of [[mice]], similar to [[smallpox]], caused by the [[poxvirus]] ''[[Ectromelia virus ]]''
+
+[[hu:mousepox]]
+[[zh:mousepox]]
