iwiki +zh <overline#3187697>

--- a/en/o/overline.775476.wikitext
+++ b/en/o/overline.775476.wikitext
@@ -15,3 +15,5 @@ Created by analogy to [[underline]].
 {{en-verb|overlines|overlining|overlined|overlined}}
 
 #To draw a [[line]] over or above text.
+
+[[zh:overline]]
