subst {{de}} in trans, subst {{eu}} in trans, trans link [[Basque]] <bound#3190801>

--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -30,14 +30,14 @@
 
 =====Translations=====
 {{trans-top|border of territory}}
-*{{de}}: {{t|de|Abgrenzung}} {{f}}
+*German: {{t|de|Abgrenzung}} {{f}}
 *Finnish: [[raja]]
 {{trans-mid}}
 *Swedish: [[gräns]] {{c}}
 {{trans-bottom}}
 
 {{trans-top|value greater (or smaller) than a given set}}
-*{{de}}: {{t|de|Schranke}} {{f}}
+*German: {{t|de|Schranke}} {{f}}
 *Finnish: [[raja-arvo]]
 {{trans-mid}}
 *Swedish: [[gräns]] {{c}}
@@ -82,8 +82,8 @@
 
 ====Translations====
 {{trans-top|sizeable jump}}
-*{{eu}}: {{t|eu|jauzi}}, {{t|eu|salto}}
-*{{de}}: {{t|de|Sprung}} {{m}}
+*[[Basque]]: {{t|eu|jauzi}}, {{t|eu|salto}}
+*German: {{t|de|Sprung}} {{m}}
 {{trans-mid}}
 *Finnish: [[hyppy]], [[loikka]]
 *Swedish: [[hopp]] {{n}}, [[skutt]] {{n}}
@@ -157,10 +157,10 @@ Alteration of ''[[boun]]'', with '''-d''' partly for [[euphonic]] effect and par
 *[[softbound]]
 *[[inbound]]
 
-[[Category:English irregular simple past forms]]
-[[Category:English irregular past participles]]
-[[Category:English words with multiple etymologies]]
 [[Category:Contranyms]]
+[[Category:English irregular past participles]]
+[[Category:English irregular simple past forms]]
+[[Category:English words with multiple etymologies]]
 
 [[ar:bound]]
 [[et:bound]]
