--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -155,7 +155,7 @@ From Northern [[French]].
 {{bottom}}
 
 ===Etymology 2===
-From [[Cockney rhyming slang]] ''rabbit and pork'', to talk.
+From [[Cockney rhyming slang]] ''[[rabbit and pork]]'', to talk.
 
 ====Verb====
 {{en-verb|rabbits|rabbitting|rabbitted}}
