template -fpl +{{f|p}}, template -mpl +{{m|p}}, template -npl +{{n|p}} <at#3216596>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -47,7 +47,7 @@
 *Finnish: [[-lla]] / [[-llä]] ''([[adessive case]])''; <br> [[-ssa]] / [[-ssä]] ''([[inessive case]])''
 *French: [[à]], [[en#French|en]]
 *German: [[an#German|an]], [[auf]], [[bei]], [[in#German|in]]
-*Greek: [[στον]] (ston) {{m}}, [[στη]] (sti) {{f}}, [[στο]] (sto) {{n}}; [[στους]] (stous) {{mpl}}, [[στις]] (stis) {{fpl}}, [[στα]] (sta) {{npl}}
+*Greek: [[στον]] (ston) {{m}}, [[στη]] (sti) {{f}}, [[στο]] (sto) {{n}}; [[στους]] (stous) {{m|p}}, [[στις]] (stis) {{f|p}}, [[στα]] (sta) {{n|p}}
 *Hungarian: [[-n]] / [[-on]] / [[-en]] / [[-ön]] ''([[superessive case]])''; [[-nál]] / [[-nél]] ''([[adessive case]])''
 *[[Ido]]: [[ye]]
 *[[Interlingua]]: [[a#Interlingua|a]], [[in#Interlingua|in]]
@@ -94,7 +94,7 @@
 *Finnish: [[-lta]] / [[-ltä]] ''([[ablative case]])''; <br> [[-na]] / [[-nä]] ''([[essive case]])''
 *French: [[à]]
 *German: [[um]]
-*Greek: [[στον]] (ston) {{m}}, [[στη]] (sti) {{f}}, [[στο]] (sto) {{n}}; [[στους]] (stous) {{mpl}}, [[στις]] (stis) {{fpl}}, [[στα]] (sta) {{npl}}
+*Greek: [[στον]] (ston) {{m}}, [[στη]] (sti) {{f}}, [[στο]] (sto) {{n}}; [[στους]] (stous) {{m|p}}, [[στις]] (stis) {{f|p}}, [[στα]] (sta) {{n|p}}
 *Hungarian: [[-kor]] ''([[temporalis case]])''
 *[[Interlingua]]: [[a#Interlingua|a]]
 {{trans-mid}}
@@ -129,7 +129,7 @@
 *Finnish: [[-lle]] ''([[allative case]])''; [[kohti]]
 *French: [[à]]
 *German: [[nach]], [[zu]]
-*Greek: [[στον]] (ston) {{m}}, [[στη]] (sti) {{f}}, [[στο]] (sto) {{n}}; [[στους]] (stous) {{mpl}}, [[στις]] (stis) {{fpl}}, [[στα]] (sta) {{npl}}
+*Greek: [[στον]] (ston) {{m}}, [[στη]] (sti) {{f}}, [[στο]] (sto) {{n}}; [[στους]] (stous) {{m|p}}, [[στις]] (stis) {{f|p}}, [[στα]] (sta) {{n|p}}
 *Hungarian: [[-t]] (''[[accusative case]]'')
 *[[Interlingua]]: [[a#Interlingua|a]]
 *Irish: [[ag#Irish|ag]]
